--- a/view/css/user/widget/mates.css
+++ b/view/css/user/widget/mates.css
@@ -1,23 +1,29 @@
-div.widget.user-mates .users ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
+div.widget.user-mates div.users,div.widget.user-mates div.categories{height:auto;overflow:visible;}
+div.widget.user-mates div.users ul,div.widget.user-mates div.categories ul {list-style: none;margin: 0;padding: 0;height:auto;overflow:auto;}
+div.widget.user-mates div.categories{height: auto;overflow: visible;padding-bottom: 10px;}	
+div.widget.user-mates div.categories ul li{display:inline-block;margin-right:5px}
+div.widget.user-mates div.categories ul li a{color:#636466;text-transform:uppercase;text-decoration:none;font-size:11px}
+div.widget.user-mates div.categories ul li a:hover{color:#20B3B2}
 
+div.widget.user-mates div.users{clear:both;};
+div.widget.user-mates div.users h3.supertitle{border-top: 1px solid #808285;border-bottom:1px dashed #818284;padding:5px 0 5px 5px;color:#20B3B2;font-size:12px;}
+div.widget.user-mates div.users h3.supertitle:hover{background:#E8E9E9;}
 div.widget.user-mates .users ul > li {        
     height: 4.5em;
     width: 50%;
     float: left;
     position: relative;
 /*    background: url("../../avatar/m.png") no-repeat 0 10px;    //@FIXME revisar esto porque los avatares trasparentes o pequeños salen con este abajo*/
+		
 }
+
+
 
 div.widget.user-mates .users ul > li.active {
-    background-color:  #f3f3f3 !important;
-}
+    background-color:  #f3f3f3 !important;}
 
 div.widget.user-mates .users ul > li .user {
-    padding: 3px 10px 10px 57px;
+    padding: 3px 8px 8px 57px;	
 }
 
 div.widget.user-mates .users ul > li .avatar {
@@ -33,8 +39,9 @@ div.widget.user-mates .users ul > li h3,
 div.widget.user-mates .users ul > li h4,
 div.widget.user-mates .users ul > li h5,
 div.widget.user-mates .users ul > li h6 {
-    margin: 0 0 .2em;
+    margin: 0;
     font-size: 11px;
+	line-height:1em;
 }
 
 div.widget.user-mates .users ul li a {
@@ -51,8 +58,8 @@ div.widget.user-mates .users ul > li h3 a,
 div.widget.user-mates .users ul > li h4 a,
 div.widget.user-mates .users ul > li h5 a,
 div.widget.user-mates .users ul > li h6 a {
-    font-size: 12px !important;
-    font-weight: bold;
+    font-size: 11px !important;
+    font-weight: normal;
 }
 
 div.widget.user-mates .users ul > li span {
@@ -75,5 +82,8 @@ div.widget.user-mates a.more  {
     float: right;
     clear: both;
     text-decoration: none;
-    
+	/*padding-right:20px;*/
+	/*background:url(more.png) right no-repeat;*/
+	line-height:1em;height:1em;margin-bottom:5px;   
 }
+
