Arreglos * rollover cuadrito ahora es azul * niveles de meritocracia en el item de usuario

--- a/view/css/discover.css
+++ b/view/css/discover.css
@@ -127,7 +127,7 @@ div.navi-bar ul.navi li > a {
 }
 
 div.navi-bar ul.navi li > a:hover {
-    background-color: #e3262a;
+    background-color: #20b3b2;
 }
 
 div.navi-bar ul.navi li > a.active {
