--- a/view/css/footer.css
+++ b/view/css/footer.css
@@ -328,8 +328,8 @@ div#sub-footer div.platoniq a:hover{
 }
 
 .slidersponsors-ctrl li.navi a:hover {
-    background-color: #e3262a;
-    color: #e3262a;
+    background-color: #20b3b2;
+    color: #20b3b2;
 }
 
 .slidersponsors-ctrl li.navi a.active {
