--- a/view/css/header.css
+++ b/view/css/header.css
@@ -285,8 +285,8 @@ div#sub-header > div > div > h2 .greenblue{
 }
 
 .sliderbanners-ctrl li.navi a:hover {
-    background-color: #e3262a;
-    color: #e3262a;
+    background-color: #20b3b2;
+    color: #20b3b2;
 }
 
 .sliderbanners-ctrl li.navi.active a {
