--- a/view/css/home.css
+++ b/view/css/home.css
@@ -62,7 +62,7 @@ body.home div#main div.learn ul li.navi > a {
 }
 
 body.home div#main div.learn ul li.navi > a:hover {
-    background-color: #e3262a;
+    background-color: #20B3B2;
 }
 
 body.home div#main div.learn ul li.navi > a.active {
