--- a/view/css/header.css
+++ b/view/css/header.css
@@ -188,7 +188,7 @@ div#sub-header > div > div.subhead-banner .shb-info .financ-meter li.optimun .eu
 }
 
 div#sub-header > div > div.subhead-banner .shb-info .financ-meter li.reached .euro{
-	background: url('euro/green/s.png') scroll no-repeat top right;
+	background: url('euro/blue/s.png') scroll no-repeat top right;
 }
 
 div#sub-header > div > div.subhead-banner .shb-info .financ-meter li.optimun .euro{
