--- a/view/css/superform.css
+++ b/view/css/superform.css
@@ -1,4 +1,3 @@
-
 /**
  * Superform!
  */
@@ -549,34 +548,27 @@ div.superform li#individual_rewards {
     background-color: #f8e3e3 !important;
 }
 
-div.superform li#costs {
-    background-color: #fdf3f4 !important;
-}
-
 div.superform li.editcost {
     background-color: #fdf3f4;
 }
 
 div.superform li.cost.required_cost-yes,
-div.superform li.editcost.required_cost-yes,
+div.superform li.editcost.required_cost-yes {
+    background-color: #fce9e9 !important;
+}
+
 div.superform li.editcost li.required_cost-yes {
     background-color: #fce9e9 !important;
 }
 
 div.superform li.cost.required_cost-no,
-div.superform li.editcost.required_cost-no,
-div.superform li.editcost li.required_cost-no {
+div.superform li.editcost.required_cost-no {
     background-color: #f2f2f2 !important;
 }
 
-/*
-div.superform li.editcost.required_cost-yes,
-div.superform li.editcost.required_cost-no {
-    margin: 0px -26px;
-    padding: 0px 26px;
-    border-top: none;
+div.superform li.editcost li.required_cost-no {
+    background-color: #f2f2f2 !important;
 }
-*/
 
 /* Imágenes gallery*/
 div.superform li#gallery div.elements li.gallery-image {
