--- a/view/css/project/widget/summary.css
+++ b/view/css/project/widget/summary.css
@@ -59,6 +59,10 @@ div.widget.project-summary ul.navi li > a {
     background-color: #cdcdce;
 }
 
+div.widget.project-summary ul.navi li.active > a {
+    background-color: #20b3b2;
+}
+
 div.widget.project-summary ul.navi li > a.active {
     background-color: #808184;
 }
@@ -67,3 +71,29 @@ div.widget.project-summary div.gallery div.gallery-image {
     display: none;
     text-align: center;
 }
+
+div.widget.project-summary ul.navi li.prev,
+div.widget.project-summary ul.navi li.next {
+    width: 1em;
+    height: 1em;
+	line-height: 2000px;
+	overflow: hidden;
+}
+
+
+div.widget.project-summary ul.navi li.prev a {
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 0;
+}
+
+div.widget.project-summary ul.navi li.prev.active a {
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
+}
+
+div.widget.project-summary ul.navi li.next a {
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -16px;
+}
+
+div.widget.project-summary ul.navi li.next.active a {
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
+}
+
