galeria de imágenes para entradas de blog y de novedades de proyecto

--- a/view/css/blog.css
+++ b/view/css/blog.css
@@ -64,13 +64,12 @@ div.widget.blog-content-module  .embed,
     height: 285px;
 	margin: 10px  30px;
 }
-div.widget.blog-content-module  .image,
-#blog-content .post .image{
-	display:block;
+div.widget.blog-content-module  .gallery-image,
+#blog-content .post .gallery-image{
 	text-align:center;
 }
-div.widget.blog-content-module  .image img,
-#blog-content .post .image img{
+div.widget.blog-content-module  .gallery-image img,
+#blog-content .post .gallery-image img{
 	margin: 0 auto;
 }
 div.widget.blog-content-module .comments-num,
