--- a/view/css/project/widget/invest.css
+++ b/view/css/project/widget/invest.css
@@ -83,9 +83,11 @@ div.widget.project-invest #amount {
     font-weight: bold;
     margin-right: 20px;
 }
+div.widget.project-invest #fullname,
 div.widget.project-invest #address {
     width: 266px;
 }
+div.widget.project-invest #nif, 
 div.widget.project-invest #zipcode {
     width: 100px;
 }
